<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/login_register_background">

    <Button
        android:id="@+id/buttonBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:text="@string/backToMenu"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BanTitle"
        android:textSize="24sp"
        android:layout_below="@id/buttonBackToMenu"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/BanHintAdmin"
        android:inputType="textEmailAddress"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@color/white"/>

    <Button
        android:id="@+id/buttonBanUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BanBtnAdmin"
        android:layout_below="@id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />


</RelativeLayout>
