<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:gravity="center"
        android:textSize="34dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50px"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleTextView">

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectLangText"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/rounded_edittext_background"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_marginTop="20px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_edittext_background"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_label"
                    android:textSize="16sp"
                    android:layout_marginTop="20px"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_edittext_background"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_marginTop="20px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_label"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_hint"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_edittext_background"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_label"
                    android:layout_marginTop="20px"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:maxLength="9"
                    android:hint="@string/phone_hint"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:background="@drawable/rounded_edittext_background"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/loginLinkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtToLogin"
                    android:layout_below="@id/passwordEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/fui_bgTwitter"
                    android:textSize="16sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
