<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    android:id="@+id/mainLayout">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="36dp"
        android:background="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50px"/>

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/selectLangText"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:layout_marginBottom="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:text="@string/email_label"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColor="@color/black"
                android:background="@drawable/rounded_edittext_background"
                android:padding="10dp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/password_label"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColor="@color/black"
                android:background="@drawable/rounded_edittext_background"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/registerLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtToRegister"
                android:layout_below="@id/passwordEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textColor="@color/fui_bgTwitter"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:padding="12dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</RelativeLayout>
