<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/log_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/dateLbl"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/log_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="4dp"
            android:text="@string/emailLbl"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/log_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_email"
            android:layout_marginTop="4dp"
            android:text="@string/actionLbl"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/log_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_action"
            android:layout_marginTop="4dp"
            android:text="@string/detailLbl"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
