<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_register_background">

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/WelcomeLbl"/>

    <!-- Contador de tiempo -->
    <TextView
        android:id="@+id/time_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:background="@drawable/border_white"
        android:layout_marginBottom="300px"
        android:layout_gravity="center"
        android:text="00:00:00"/>

    <!-- Botones -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WebBtn"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/button_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IntroduceReservationBtnAdmin"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <!-- Botón de cerrar sesión -->
    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closeSessionBtn"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/black"/>

</LinearLayout>
