<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <ImageView
        android:layout_width="210dp"
        android:layout_height="170dp"
        android:src="@drawable/userico"
        android:layout_gravity="center"
        android:background="@color/white"></ImageView>
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/emailLbl"
        android:inputType="textEmailAddress"
        android:enabled="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20px"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/phone_label"
        android:maxLength="9"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20px"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/username_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20px"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editTextTimeLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/timeLeftHint"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20px"
        android:background="@color/white"/>

    <CheckBox
        android:id="@+id/checkBoxAdmin"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:layout_marginTop="20px"
        android:background="@color/white"/>

    <Button
        android:id="@+id/buttonSaveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:layout_marginTop="8dp"
        android:layout_gravity="center" />
</LinearLayout>
